force-app/main/default/objects/QTB_PurchaseOrder__c/QTB_PurchaseOrder__c.object-meta.xml
<CustomObject>
    <description>#QTB-38&amp;39 Custom Object for Purchase Orders</description>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>Pur-{00000000}</displayFormat>
        <label>PurchaseOrder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>