force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_100_Utilization_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>QTB_100_Utilization_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to track if the email sent for 100% utilization or not.</description>
    <label>100 Utilization Email Sent</label>
    <type>Checkbox</type>
</CustomField>