force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_60_Days_After_100_Utilization_Email__c.field-meta.xml
<CustomField>
    <fullName>QTB_60_Days_After_100_Utilization_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>60 Days After 100% Utilization Email</label>
    <type>Checkbox</type>
</CustomField>