force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_60_Days_Before_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>QTB_60_Days_Before_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>60 Days Before Email Sent</label>
    <type>Checkbox</type>
</CustomField>