force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_75_Utilization_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>QTB_75_Utilization_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to track if the email sent for 75% utilization or not.</description>
    <label>75% Utilization Email Sent</label>
    <type>Checkbox</type>
</CustomField>