force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_90_Days_After_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>QTB_90_Days_After_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>90 Days After Email Sent</label>
    <type>Checkbox</type>
</CustomField>