force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Amount__c.field-meta.xml
<CustomField>
    <fullName>QTB_Amount__c</fullName>
    <description>#QTB_38&amp;39  Account(look up)</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>