force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#QTB_38&amp;39 Billing Account(look up)</description>
    <label>Billing Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>