force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>QTB_Customer_Id__c</fullName>
    <description>#QTB_38&amp;39 Customer Id</description>
    <label>Customer Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>