force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>QTB_Customer_PO__c</fullName>
    <description>#QTB 38&amp;39 Customer PO</description>
    <label>Customer PO</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>