force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Date_Of_100_Utilization__c.field-meta.xml
<CustomField>
    <fullName>QTB_Date_Of_100_Utilization__c</fullName>
    <description>This is only used to track the 100% utilization date. Because based on this we need to send the email(30 Days After full Utilization/ 60 Days After full Utilization)</description>
    <label>Date Of 100% Utilization</label>
    <type>Date</type>
</CustomField>