force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Div_Dept_Level__c.field-meta.xml
<CustomField>
    <fullName>QTB_Div_Dept_Level__c</fullName>
    <description>#QTB-38&amp;39 Div/Dept Level</description>
    <label>Div/Dept Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>