force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Division__c.field-meta.xml
<CustomField>
    <fullName>QTB_Division__c</fullName>
    <description>#QTB-38&amp;39 Division</description>
    <label>Division</label>
    <length>20</length>
    <type>Text</type>
</CustomField>