force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_DM_Source_System__c.field-meta.xml
<CustomField>
    <fullName>QTB_DM_Source_System__c</fullName>
    <description>#SFCPQBLG-479 - source system name for DM</description>
    <label>DM Source System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>