force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_DM_Source_System_Reference__c.field-meta.xml
<CustomField>
    <fullName>QTB_DM_Source_System_Reference__c</fullName>
    <description>Billing Account No~Source System Level1 Code~Source System Level2 Code~Source System Level3 Code</description>
    <label>DM Source System Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>