force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_End_Date__c</fullName>
    <description>#QTB-38&amp;39 End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>