force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>QTB_Enterprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#QTB-38&amp;39 Enterprise(lookup)</description>
    <label>Enterprise</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only IMGA accounts can be selected</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IMGA Record Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Enterprise)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>