force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Expiration_Today_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>QTB_Expiration_Today_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expiration Today Email Sent</label>
    <type>Checkbox</type>
</CustomField>