force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Linked_Sales_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Linked_Sales_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a backend field used to store the Sales Account which assists us to display the windows on LWC componenet based upon the fact if theres an existing linking or not</description>
    <label>Linked Sales Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Linked Sales Account)</relationshipLabel>
    <relationshipName>LinkedSalesAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>