force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Notes__c.field-meta.xml
<CustomField>
    <fullName>QTB_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>