force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_PO_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>QTB_PO_Balance_Amount__c</fullName>
    <description>PO Balance Amount field to capture balance amount on the Purchase Order</description>
    <label>PO Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>