force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_PO_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_PO_Type__c</fullName>
    <label>PO Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Blanket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>