force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_PO_Utilized_Amount__c.field-meta.xml
<CustomField>
    <fullName>QTB_PO_Utilized_Amount__c</fullName>
    <label>PO Utilized Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>