force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_Service_Type__c</fullName>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>