force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Split_Invoice_Flag__c.field-meta.xml
<CustomField>
    <fullName>QTB_Split_Invoice_Flag__c</fullName>
    <formula>QTB_Billing_Account__r.QTB_Split_Invoice_Flag__c</formula>
    <label>Split Invoice Flag</label>
    <type>Checkbox</type>
</CustomField>