force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_Start_Date__c</fullName>
    <description>#QTB-38&amp;39 Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>