force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Status__c.field-meta.xml
<CustomField>
    <fullName>QTB_Status__c</fullName>
    <description>#QTB-38&amp;39 Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>