force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_Type__c</fullName>
    <description>#QTB-38&amp;39 Type(Picklist)</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Purchase Orders</fullName>
                <default>true</default>
                <label>Standard Purchase Orders</label>
            </value>
            <value>
                <fullName>Blanket Purchase Orders</fullName>
            </value>
            <value>
                <fullName>Contract Purchase Orders</fullName>
                <isActive>false</isActive>
                <label>Contract Purchase Orders</label>
            </value>
            <value>
                <fullName>Planned Purchase Orders</fullName>
                <isActive>false</isActive>
                <label>Planned Purchase Orders</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>