force-app/main/default/objects/QTB_PurchaseOrder__c/fields/QTB_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>QTB_Work_Order__c</fullName>
    <description>#QTB-38&amp;39 Work Order</description>
    <label>Work Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>