force-app/main/default/objects/QTB_PurchaseOrder__c/fields/Type_of_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Notification_Sent__c</fullName>
    <label>Type of Notification Sent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>