force-app/main/default/objects/QTB_PurchaseOrder__c/validationRules/QTB_Purchase_Order_End_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>QTB_Purchase_Order_End_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>QTB_Start_Date__c &gt; QTB_End_Date__c</errorConditionFormula>
    <errorMessage>End Date should be greater than Start Date</errorMessage>
</ValidationRule>