force-app/main/default/objects/QTB_PurchaseOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QTB_Billing_Account__c</columns>
    <columns>QTB_Customer_PO__c</columns>
    <columns>QTB_Div_Dept_Level__c</columns>
    <columns>QTB_Division__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>QTB_PO_Balance_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QTB_100_Utilization_Email_Sent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>